# AI-PoC-Agents

./: .env.example  .gitignore  DESIGN.md  IDEA.md  README.md  main.py  pyproject.toml  requirements.txt
configs/: default_config.yaml
examples/kdd_classification_work/: workflow_summary.json
examples/kdd_classification_work/execution/: execution_errors_iteration_0.txt  execution_iteration_0.json  execution_log_iteration_0.md  execution_output_iteration_0.txt
examples/kdd_classification_work/idea_generation/: idea_generation_iteration_0.json
examples/kdd_classification_work/idea_reflection/: idea_reflection_iteration_0.json
examples/kdd_classification_work/implementation/: README_iteration_0.md  implementation_iteration_0.json
examples/kdd_classification_work/poc_design/: poc_design_document_iteration_0.md  poc_design_iteration_0.json
examples/kdd_classification_work/problem_identification/: problem_identification_iteration_0.json
examples/kdd_classification_work/problem_search/: problem_search_iteration_0.json
examples/kdd_classification_work/reflection/: reflection_iteration_0.json  reflection_report_iteration_0.md
examples/kdd_classification_work/reporting/: poc_report_iteration_0.md  reporting_data_iteration_0.json
examples/ocr_examples_work/: README.md  workflow_summary.json
examples/ocr_examples_work/execution/: execution_iteration_0.json  execution_log_iteration_0.md  execution_output_iteration_0.txt
examples/ocr_examples_work/idea_generation/: generated_ideas_iteration_0.json  idea_generation_iteration_0.json
examples/ocr_examples_work/idea_reflection/: idea_evaluation_iteration_0.json  idea_reflection_iteration_0.json
examples/ocr_examples_work/implementation/: README_iteration_0.md  implementation_iteration_0.json  implementation_summary_iteration_0.json
examples/ocr_examples_work/poc_design/: poc_design_document_iteration_0.md  poc_design_iteration_0.json  poc_design_specification_iteration_0.json
examples/ocr_examples_work/problem_identification/: problem_identification_iteration_0.json
examples/ocr_examples_work/problem_search/: problem_search_iteration_0.json
examples/ocr_examples_work/reflection/: reflection_iteration_0.json  reflection_report_iteration_0.md
examples/ocr_examples_work/reporting/: poc_report_iteration_0.md  reporting_data_iteration_0.json
local_codes/: binary_classifier.py  generic_classifier.py  model_comparison.py
scripts/: run.sh  run_kdd_classification.sh
src/ai_poc_agents_v2/: __init__.py
src/ai_poc_agents_v2/agents/: __init__.py  base_agent.py  evaluation_agent.py  poc_agent.py  problem_agent.py
src/ai_poc_agents_v2/agents_v2/: __init__.py  execute_agent.py  idea_generation_agent.py  idea_reflection_agent.py  implementation_agent.py  poc_design_agent.py  problem_identification_agent.py  reflection_agent.py  reporting_agent.py  (+3 more)
workspace/20250808_005438_ocr_poc/: final_state.json
workspace/20250808_013054_ocr_poc/: final_state.json
(+78 files in other folders)
